	- Alterac Valley: Call of Air - Ichman's Fleet (A)   (Thanks maqjav)
	- Alterac Valley: Call of Air - Guse's Fleet (H)   (Thanks maqjav)
	- Alterac Valley: Call of Air - Jeztor's Fleet (H)   (Thanks maqjav)
	- Alterac Valley: Call of Air - Mulverick's Fleet (H)   (Thanks maqjav)
	- Shattered Halls: Entry Into the Citadel
	- Serpentshrine Cavern: The Secret Compromised



Version 4.1.0

- Updated TOC for 2.4 patch.
- EquipCompare support removed.
- Comparison Tooltips added. This is optional and toggled off by default. Thanks to Daviesh & AtlasLoot for the code!
- Server AutoQuery added. AtlasQuest will query the server for rewards when quest data is shown. This is optional and toggled off by default. Re-used code from Daviesh & AtlasLoot.
- Option added to turn off Server Query spam (suggested by Telchar).
- German localization updated by Telchar.
- German translation of Burning Crusade quests from Nalumis.
- Simplified Chinese localization updated by yeachan.
- Added all Dungeon Daily quests.
- Adjusted AtlasQuest button in Atlas. (suggested by Telchar)
- Updated AlphaMap file names for AlphaMap 3.0.

- Updates for Atlas 1.11.0:
	- Renamed Atlas addon paths (Telchar)
	- Moved AtlasQuest frame
	- Updated locations: Zul'Aman, Blackwing Lair, Shadowfang Keep
	- Added Outdoor Raids: Skettis.
	- Added Magisters' Terrace & Sunwell Plateau.

- Fixes:
	- Quest names were not being colored blue when CT Mod's Show Quest Level option was on. Big thanks to Denival for the fix!
	- Parentheses in quest names (such as class quests) would break AtlasQuest's blue quest title option. Thanks again to Denival for the fix!
	- Removed Bayi's Extended Questlog fix for quest names since his addon now fixes it.
	- Incorrectly had "Wanted: Shattered Hand Centurions" marked as a Heroic quest.
	- Coordinates of quest giver for Horde quest "Shadowshard Fragments" were wrong.
	- Other miscellanous typos. Thanks to Telchar for finding some I missed.